Avoid wrong padding for 'video' container

--- a/source/sass/blocks/includes-item.scss
+++ b/source/sass/blocks/includes-item.scss
@@ -140,7 +140,7 @@
   margin: 0;
 }
 
-.includes-item__video {
+.includes-item__inner {
   flex-shrink: 0;
   flex-basis: auto;
   order: -1;
@@ -198,7 +198,7 @@
     }
   }
 
-  .includes-item__video {
+  .includes-item__inner {
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 2.357em;
