--- a/source/sass/blocks/trust.scss
+++ b/source/sass/blocks/trust.scss
@@ -120,7 +120,7 @@
     width: 100%;
   }
 
-  .trust__video {
+  .trust__inner {
     flex-shrink: 0;
     flex-basis: auto;
 
